# LegoClassifier

./: .gitignore
.github/workflows/: cmake-multi-platform.yml
Docs/: USB_comms_protocol.md
LegoClassifier/: .mxproject  .project  CMakeLists.txt  CMakePresets.json  LegoClassifier.ioc  STM32H723XG_FLASH.ld
LegoClassifier/App/: CMakeLists.txt
LegoClassifier/App/Inc/: app.h  app_entry.h
LegoClassifier/App/Src/: app.cpp
LegoClassifier/BusinessLogic/: CMakeLists.txt
LegoClassifier/BusinessLogic/Inc/: dummy_logic.h
LegoClassifier/BusinessLogic/Src/: dummy_logic.cpp
LegoClassifier/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
LegoClassifier/Core/Src/: dcmi.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  rtc.c  spi.c  stm32h7xx_it.c  tim.c  usart.c
LegoClassifier/Platform/: CMakeLists.txt
LegoClassifier/Platform/Camera/: camera.cpp  camera_def.h
LegoClassifier/Platform/Camera/OV2640/: ov2640.c  ov2640.cpp  ov2640.h
LegoClassifier/Platform/Display/: font.h  lcd.cpp
LegoClassifier/Platform/Display/ST7735/: st7735_bsb.cpp  st7735_bsp.h
LegoClassifier/Platform/Inc/: USB.h  board.h  camera.h  lcd.h  logger.h  mcu.h  state.h  transmission_types.h
LegoClassifier/Platform/Inc/Camera/: camera.h
LegoClassifier/Platform/STM32/STM32H723VGT6/: logger.cpp  sectors.h  stm32.cpp  stm32.h
LegoClassifier/Platform/STM32/WeActStudioMiniSTM/: weact_mini_stm.cpp  weact_mini_stm.h
LegoClassifier/Platform/Usb/: USB.cpp  transmission_types.h  usb_def.h  usb_descriptor.cpp  usb_handlers.cpp
LegoClassifier/Tests/: CMakeLists.txt
LegoClassifier/Tests/BusinessLogic/: CMakeLists.txt  dummy_test.cpp
LegoClassifier/Tests/Mocks/: CMakeLists.txt
LegoClassifier/USB_DEVICE/App/: usbd_desc.c
LegoClassifier/cmake/stm32cubemx/: CMakeLists.txt
LegoClassifierUI/: .env.example  .gitignore  main.py  requirements.txt
LegoClassifierUI/config/: __init__.py
LegoClassifierUI/connection/: image_utils.py  packet.py  packet_type.py  usb_connection.py
LegoClassifierUI/database/: __init__.py  repository.py
LegoClassifierUI/ui/: __init__.py  image_panel.py  main_window.py  results_panel.py
LegoClassifierUtils/: .clang-tidy  CMakeLists.txt  CMakePresets.json  library.h
LegoClassifierUtils/LegoContours/: CMakeLists.txt
LegoClassifierUtils/LegoContours/bindings/: CMakeLists.txt  lego_bindings.cpp
LegoClassifierUtils/LegoContours/inc/: lego_contours.hpp  lego_features.hpp
LegoClassifierUtils/LegoContours/src/: CMakeLists.txt  lego_contour.cpp  lego_features.cpp
LegoClassifierUtils/LegoContours/tests/: CMakeLists.txt  main.cpp  studs.cpp
LegoClassifierUtils/cmake/: windows-tests-ucrt64.cmake
